# omnifocus-cli

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  PERSONAL_DATA_CLEANUP_PLAN.md  README.md  __init__.py  basic_test.applescript  batch_organize_inbox.py  cleanup_script.applescript  cli_main.py  config.json  generate_categorized_tasks_report.py  install.sh  ofcli.py  ofcli_fresh.sh  ofcli_utils.py  patch_imports.py  pyproject.toml  requirements.txt  sample_tasks.csv  sample_tasks.json  setup.py  simple_test.applescript  test_omnifocus.applescript  test_omnifocus.scpt  test_script.applescript  transform_omnijs_to_ofcli.py
ai_integration/: AI_AUDIT_REPORT.md  __init__.py  ai_utils.py  anthropic_client.py  calendar_analyzer.py  family_scheduler.py  ical_integration.py  imessage_integration.py  llama3_ollama_client.py  openai_client.py
ai_integration/prompt_templates/: sample_prompts.md
ai_integration/utils/: __init__.py  ai_fuzzy_group_projects.py  config.py  consent.py  finance_text_rank.py  format_utils.py  logging_utils.py  prompt_utils.py
commands/: __init__.py  add_command.py  applescript_calendar_integration.py  archive_command.py  audit_command.py  calendar_command.py  cleanup_command.py  complete_command.py  delegation_command.py  delete_calendar_events.py  delete_command.py  emergency_calendar_command.py  evan_car_repair_updated.py  eventkit_calendar_command.py  icalbuddy_integration.py  imessage_command.py  list_command.py  merge_command.py  next_command.py  prioritize_command.py  scan_command.py  schedule_car_repair.py  schedule_family.py  search_command.py
data/: README.md  omnifocus.sqlite
data/examples/: sample_tasks.json
data/exports/2025/07/: omnifocus-export-2025-07-19T101025.json  omnifocus-export-2025-07-19T101723.json  omnifocus-export-2025-07-19T101735.json  omnifocus-export-2025-07-19T101748.json  omnifocus-export-2025-07-19T101807.json  omnifocus-export-2025-07-19T101906.json  omnifocus-export-2025-07-19T102138.json  omnifocus-export-2025-07-19T103022.json  omnifocus-export-2025-07-19T103123.json  omnifocus-export-2025-07-19T103208.json  omnifocus-export-2025-07-19T103356.json  omnifocus-export-2025-07-19T103410.json  omnifocus-export-2025-07-19T103556.json  omnifocus-export-2025-07-19T103614.json  omnifocus-export-2025-07-19T103720.json  omnifocus-export-2025-07-19T103803.json  omnifocus-export-2025-07-19T104420.json  omnifocus-export-2025-07-19T104519.json  omnifocus-export-2025-07-19T104643.json  omnifocus-export-2025-07-19T104948.json
docs/: README.md  USAGE.md
omnifocus_api/: __init__.py  apple_script_client.py  batch_operations.py  data_models.py  evernote_operations.py  exportMasterPlanData.omnijs  omnijs_client.py  search_filters.py  taskModifications.omnijs  task_operations.py  utils.py
plugins/: README.md  advanced_delegation.omnijs  sample_plugin.omnijs
reference_archive/: archive_summary_20250707_195632.json  archive_summary_20250707_200546.json  archive_summary_20250707_200723.json  archive_summary_20250707_200847.json  archive_summary_20250707_200908.json  archive_summary_20250707_201029.json  archive_summary_20250707_201430.json  archive_summary_20250707_201519.json  omnifocus_archive_20250707_201430.json
scripts/: list_inbox_flagged_overdue.py
tests/: __init__.py  test_ai_integration.py  test_applescript_client.py  test_cli.py  test_commands.py  test_list_projects.py  test_omnifocus_api.py  test_validation.py
utils/: config.py  data_loading.py  ensure_export.py  export_cache.json  export_schema.py  logger.py
